metadata/unpackaged/objects/BE_Builds__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <label>Build Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>BrainEngine Builds</relationshipLabel>
        <relationshipName>BrainEngine_Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>BE_Release__c</referenceTo>
        <relationshipLabel>BrainEngine Builds</relationshipLabel>
        <relationshipName>BrainEngine_Builds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BrainEngine Build</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Build</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BrainEngine Builds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>